Uploaded image for project: 'Qt'
  1. Qt
  2. QTBUG-20919

"Word bubble" element doesn't disappear from QML TextEdit/TextInput elements after a tap when Symbian partial screen VKB is used

    XMLWordPrintable

Details

    • 1679b2d71f4f573699aad20aebf4eacc7605fdc8, b186288cbf796be662f86ae4d5c70e39ba6afb67

    Description

      STEPS:

      Set up a TextEdit/TextInput element.
      Set Symbian environment to utilize partial screen virtual keyboard.
      Set prediction on.
      Start typing some words... when you are typing a word where the prediction engine suggests something you have not typed, you see the letters you have typed in an UI element above the suggested underlined word.
      Tap elsewhere on TextEdit/TextInput element.

      EXPECTED OUTCOME:

      The "word bubble" disappears.

      ACTUAL OUTCOME:

      The "word bubble" is still visible. It only disappears when you start typing again.

      Attachments

        No reviews matched the request. Check your Options in the drop-down menu of this sections header.

        Activity

          People

            samimeri Sami Merila (Inactive)
            jaakkorp Jaakko Korpela
            Votes:
            0 Vote for this issue
            Watchers:
            0 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Gerrit Reviews

                There are no open Gerrit changes