Exact word bubble doesn't disappear when screen is tapped

Sync FEP-aware text editors state to native side. Thus, native side can
then do various operations based on editor state - such as removing
the user typed 'exact word bubble'.

Task-number: QTBUG-20919
Reviewed-by: Miikka Heikkinen
(cherry picked from commit 1679b2d71f4f573699aad20aebf4eacc7605fdc8)

Reapplied after bad v4.7.4 merge